--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,15 +2,17 @@ version: '3.8'
 
 services:
   postgis:
-    image: registry.developers.crunchydata.com/crunchydata/crunchy-postgres-gis:centos8-13.1-3.0-4.5.1
+    build:
+      context: ./.config/postgis 
+    image: exspda_postgis:13-3.0-3.12
     container_name: exspda_postgis
     env_file: 
-      - ./.config/postgis.env
+      ./.config/postgis/postgis.env 
     volumes: 
-      - exspda_postgis_data:/pgdata
-      - ./local_data/geospatial:/work:Z
+      - exspda_postgis_data:/var/lib/postgresql/data
+      - ./local_data/geospatial:/work
     hostname: exspda_postgis
-    networks: 
+    networks:
       - exspda_network
     ports: 
       - 5555:5432
@@ -24,39 +26,14 @@ services:
       - ./.config/pgadmin4/pgadmin.env
     volumes: 
       - exspda_pgadmin4:/var/lib/pgadmin
+      - ./local_data/pgadmin:/work
     depends_on:
       - postgis
     hostname: exspda_pgadmin4
     networks: 
       - exspda_network
     ports: 
-      - 5050:5050
-
-  # tileserver:
-  #   image: pramsey/pg_tileserv:20201218
-  #   container_name: exspda_pg_tileserv
-  #   env_file: 
-  #     - ./.config/pg_serv.env
-  #   depends_on:
-  #     - postgis
-  #   hostname: exspda_pg_tileserv
-  #   networks: 
-  #     - exspda_network
-  #   ports: 
-  #     - 7800:7800
-
-  # featureserver:
-  #   image: pramsey/pg_featureserv:20200408
-  #   container_name: exspda_pg_featureserv
-  #   env_file: 
-  #     - ./.config/pg_serv.env
-  #   depends_on:
-  #     - postgis
-  #   hostname: exspda_pg_featureserv
-  #   networks: 
-  #     - exspda_network
-  #   ports: 
-  #     - 9000:9000
+      - 5050:80
 
   tileserver:
     build: 
