No more crunchydata images.

--- a/.config/pgadmin4/Dockerfile
+++ b/.config/pgadmin4/Dockerfile
@@ -1,5 +1,4 @@
 FROM dpage/pgadmin4:2020-12-16-1
 
-# FROM registry.developers.crunchydata.com/crunchydata/crunchy-pgadmin4:centos8-13.1-4.5.1
-
 COPY servers.json /pgadmin4/servers.json
+# COPY config_local.py /pgadmin4/config_local.py
