pgloader and gdal run in shell

--- a/.config/postgis/Dockerfile
+++ b/.config/postgis/Dockerfile
@@ -4,24 +4,27 @@ LABEL maintainer="Nate Currit"
 
 ENV PGROUTING_VERSION 3.1.2
 
-RUN set -ex \
- && apt-get update \
- && apt-get install  -y --no-install-recommends \
- build-essential \
- g++ \
- sqlite3 \
- libsqlite3-dev \
- libtiff5-dev \
- curl \
- pkg-config \
- wget \
- ca-certificates \
- unzip
+# If impatient, comment out from here...
+# RUN set -ex \
+#  && apt-get update \
+#  && apt-get install  -y --no-install-recommends \
+#  build-essential \
+#  g++ \
+#  sqlite3 \
+#  libsqlite3-dev \
+#  libtiff5-dev \
+#  curl \
+#  pkg-config \
+#  wget \
+#  ca-certificates \
+#  unzip
 
 # RUN wget https://download.osgeo.org/proj/proj-7.2.0.tar.gz \
 #  && tar xvzf proj-7.2.0.tar.gz \
 #  && cd proj-7.2.0 \
-#  && ./configure --without-curl \
+#  && ./configure \
+#     --without-curl \
+#     --prefix=/usr/local \
 #  && make && make install \
 #  && cd ..
 
@@ -29,13 +32,21 @@ RUN set -ex \
 #  && unzip gdal304.zip \
 #  && cd gdal-3.0.4 \
 #  && ./configure \
+#      --prefix=/usr/local \
+#      --with-proj=/usr/local \
+#      --with-pg=/usr/bin/pg_config \
 #  && make clean && make && make install \
 #  && export LD_LIBRARY_PATH=/usr/local/lib \
 #  && gdalinfo --version
+# ...to here
 
 RUN set -ex \
  && apt-get update \
-#  && apt-cache showpkg python3 \
+#  && apt-get install -y --no-install-recommends \
+#         software-properties-common \
+#  && add-apt-repository ppa:ubuntugis/ppa \
+#  && apt-get update \
+ && apt-cache showpkg python3 \
  && apt-get install -y --no-install-recommends \
         python3 \
         python3-pip \
@@ -47,9 +58,11 @@ RUN set -ex \
  && apt-get install -y --no-install-recommends \
         postgresql-13-pgrouting \
         postgresql-13-pgrouting-scripts \
- && apt-get install -y --no-install-recommends \
-        pgloader \
-        postgresql-13-ogr-fdw \
+#  && apt-get install -y --no-install-recommends \
+#         pgloader \
+#         # If you comment out lines 8-35, comment out the following line, too.
+#         gdal-bin \ 
+#         postgresql-13-ogr-fdw \
  && rm -rf /var/lib/apt/lists/*
 RUN echo '#!/bin/bash\n/usr/bin/python3' > /usr/bin/python \
     && chmod +x /usr/bin/python \ 
