--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,10 +35,9 @@ services:
       - 5050:80
 
   pgloader:
-    # build:
-    #   context: ./.config/pgloader
-    # image: exspda_pgloader
     image: dimitri/pgloader:latest
+    stdin_open: true # docker run -i
+    tty: true        # docker run -t
     container_name: exspda_pgloader
     volumes: 
       - ./local_data/geospatial:/work
@@ -48,6 +47,8 @@ services:
 
   gdal:
     image: osgeo/gdal:alpine-small-latest
+    stdin_open: true # docker run -i
+    tty: true        # docker run -t
     container_name: exspda_gdal
     volumes: 
       - ./local_data/geospatial:/work
